# src/controllers/auth.controller.ts
@@ -25,7 +25,25 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().email().required(),
-    password: Yup.string().required(),
+    password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+        'at-least-one-uppercase-letter', 
+        "Contains at least one uppercase letter", 
+        (value) => {
+        if (!value) return false;
+        const regex = /[A-Z]/;
+        return regex.test(value);
+    })
+    .test(
+        'at-least-one-number', 
+        "Contains at least one number", 
+        (value) => {
+        if (!value) return false;
+        const regex = /\d/;
+        return regex.test(value);
+    }),
     confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref('password'), ""], "password must match")
@@ -33,6 +51,9 @@ const registerValidateSchema = Yup.object({
 
 export default {
     async register (req: Request, res: Response) {
+        /**
+         * #swagger.tags = ['Auth']
+         */
         const {
             username,
             fullName,
@@ -67,7 +88,9 @@ export default {
     },
 
     async login (req: Request, res: Response) {
-
+        /**
+         * #swagger.tags = ['Auth']
+         */
 
         const {identifier, password} = req.body as unknown as TLogin
         try {
@@ -79,12 +102,13 @@ export default {
                     },
                     {
                         username: identifier,
-                    }
-                ]
+                    },
+                ],
+                isActive: true
             })
 
             if(!userByIdentifier) {
-                return res.status(404).json({
+                return res.status(403).json({
                     message: "User not found",
                     data: null
                 })
@@ -121,6 +145,7 @@ export default {
 
     async me (req: IReqUser, res: Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.security = [{
          "bearerAuth": []
          }]
@@ -135,6 +160,43 @@ export default {
                 data: result,
             })
 
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            })
+        }
+    },
+    async activation(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+            required: true,
+             content: {
+                "application/json": {
+                    schema: { $ref: "#/components/schemas/ActivationRequest"}
+                }
+             }
+        }
+         */
+        try {
+            const { code} = req.body as { code: string };
+
+            const user = await UserModel.findOneAndUpdate({
+                activationCode: code,
+            }, 
+            {
+                isActive: true
+            },
+            {
+                new: true
+            }
+        );
+        res.status(200).json({
+            message: "Account activated successfully",
+            data: user,
+        });
         } catch (error) {
             const err = error as unknown as Error;
             res.status(400).json({
